# BotDiscordPython

./: README.md  index.html  keep_alive.py  main.py  pyproject.toml  script.js  scriptsearch.js  search.html  stylesearch.css
Lib/: Color.py  OpenVar.py
Temp/Data/: Configuration.ini  ImageDictionnaire.py
